config/admission/vmtr_authz_vap.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: vmtr-authz
  labels:
    app.kubernetes.io/name: virt-template
    app.kubernetes.io/managed-by: kustomize
    kubevirt.io: virt-template-vmtr-authz
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - template.kubevirt.io
      apiVersions:
      - v1alpha1
      - v1beta1
      operations:
      - CREATE
      resources:
      - virtualmachinetemplaterequests
  variables:
  - name: sourceNS
    expression: object.spec.virtualMachineRef.namespace
  - name: sourceVM
    expression: object.spec.virtualMachineRef.name
  - name: targetNS
    expression: object.metadata.namespace
  validations:
  # Cross namespace source checks
  - expression: >-
      variables.sourceNS == variables.targetNS ||
      authorizer.group('template.kubevirt.io').resource('virtualmachinetemplaterequests').subresource('source').namespace(variables.sourceNS).name(variables.sourceVM).check('create').allowed()
    messageExpression: >-
      'User is not allowed to use VirtualMachine ' + variables.sourceNS + '/' + variables.sourceVM + ' as a source for VirtualMachineTemplateRequests'
    reason: Forbidden
  # Target namespace checks
  - expression: >-
      authorizer.group('cdi.kubevirt.io').resource('datavolumes').namespace(variables.targetNS).check('create').allowed()
    messageExpression: >-
      'User is not allowed to create DataVolumes in namespace ' + variables.targetNS
    reason: Forbidden
  - expression: >-
      authorizer.group('template.kubevirt.io').resource('virtualmachinetemplates').namespace(variables.targetNS).check('create').allowed()
    messageExpression: >-
      'User is not allowed to create VirtualMachineTemplates in namespace ' + variables.targetNS
    reason: Forbidden
