config/admission/vmtr_authz_vapb.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: vmtr-authz
spec:
  policyName: vmtr-authz
  validationActions:
  - Deny
